# reechat_third_party

hiredis-2.8.11/: .gitignore  CMakeLists.txt
hiredis-2.8.11/projects/hiredis.xcodeproj/: project.pbxproj
hiredis-2.8.11/projects/hiredis.xcodeproj/xcuserdata/raymon_wang.xcuserdatad/xcschemes/: hiredis_osx.xcscheme  xcschememanagement.plist
jsoncpp/: Android.mk
jsoncpp/jsoncpp.xcodeproj/: project.pbxproj
jsoncpp/jsoncpp.xcodeproj/xcuserdata/raymon_wang.xcuserdatad/xcschemes/: jsoncpp_ios.xcscheme  jsoncpp_osx.xcscheme  xcschememanagement.plist
jsoncpp/source/: Makefile.am
libevent2/projects/event2.xcodeproj/xcuserdata/raymon_wang.xcuserdatad/xcschemes/: xcschememanagement.plist
libevent2/test/: regress.gen.c  regress.gen.h
mariadb-5.5.59/: .gitignore
mariadb-5.5.59/include/: mysql_version.h
mariadb-5.5.59/mysqlclient.xcodeproj/: project.pbxproj
mariadb-5.5.59/mysqlclient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mariadb-5.5.59/mysqlclient.xcodeproj/xcuserdata/raymon_wang.xcuserdatad/xcschemes/: mysqlclient.xcscheme  xcschememanagement.plist
webrtc/: CMakeLists.txt
